--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -34,6 +34,12 @@
         android:defaultValue="false"/>
 
     <com.aicp.gear.preference.SystemSettingSwitchPreference
+        android:key="force_expanded_notifications"
+        android:title="@string/force_expanded_notifications_title"
+        android:summary="@string/force_expanded_notifications_summary" 
+        android:defaultValue="false" />
+
+    <com.aicp.gear.preference.SystemSettingSwitchPreference
         android:key="qs_footer_warnings"
         android:title="@string/qs_footer_warnings_title"
         android:summary="@string/qs_footer_warnings_summary"
