Add Haptic Feedback to tiles [2/2]
Signed-off-by: mydongistiny <jaysonedson@gmail.com>

--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -57,6 +57,12 @@
         android:summary="@string/qs_tile_title_visibility_summary"
         android:defaultValue="true" />
 
+    <com.aicp.gear.preference.SecureSettingSwitchPreference
+        android:key="quick_settings_vibrate"
+        android:title="@string/quick_settings_vibrate_title"
+        android:summary="@string/quick_settings_vibrate_summary"
+        android:defaultValue="false"/>
+
     <com.aicp.gear.preference.SystemSettingSwitchPreference
         android:key="qs_carrier_text"
         android:title="@string/qs_hide_carriertext_title"
