--- a/res/xml/system_extensions.xml
+++ b/res/xml/system_extensions.xml
@@ -18,6 +18,7 @@
 -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:aicpextras="http://schemas.android.com/apk/res-auto"
     android:title="@string/system_extensions_title">
 
     <Preference
@@ -26,5 +27,12 @@
         android:summary="@string/system_app_remover_summary">
         <intent android:action="com.aicp.extras.ViewSystemAppRemover" />
     </Preference>
+
+    <com.aicp.extras.preference.SystemSettingMasterSwitchPreference
+        android:key="enable_app_circle_bar"
+        android:title="@string/app_circle_bar_title"
+        android:summary="@string/app_circle_bar_summary"
+        android:defaultValue="false"
+        android:fragment="com.aicp.extras.fragments.AppCircleBar" />
 
 </PreferenceScreen>
