--- a/res/xml/navigation_bar.xml
+++ b/res/xml/navigation_bar.xml
@@ -16,7 +16,7 @@
 -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aicpextras="http://schemas.android.com/akp/res-auto"
+    xmlns:aicpextras="http://schemas.android.com/apk/res-auto"
     android:title="@string/navbar_title">
 
     <PreferenceCategory
