--- a/res/xml/edge_gestures.xml
+++ b/res/xml/edge_gestures.xml
@@ -42,7 +42,7 @@
         android:key="edge_gestures_category_back"
         android:title="@string/edge_gestures_back_category_title">
 
-    <com.aicp.gear.preference.SecureSettingIntListPreference
+        <com.aicp.gear.preference.SecureSettingIntListPreference
             android:key="edge_gestures_back_edges"
             android:title="@string/edge_gestures_back_edges_title"
             android:entries="@array/edge_gestures_back_edges_labels"
@@ -50,7 +50,7 @@
             android:summary="%s"
             android:defaultValue="5" />
 
-    <com.aicp.gear.preference.SecureSettingIntListPreference
+        <com.aicp.gear.preference.SecureSettingIntListPreference
             android:key="edge_gestures_landscape_back_edges"
             android:title="@string/edge_gestures_landscape_back_edges_title"
             android:entries="@array/edge_gestures_back_edges_labels"
@@ -58,7 +58,7 @@
             android:summary="%s"
             android:defaultValue="5" />
 
-    <com.aicp.gear.preference.SecureSettingSeekBarPreference
+        <com.aicp.gear.preference.SecureSettingSeekBarPreference
             android:key="edge_gestures_back_screen_percent"
             android:title="@string/edge_gestures_back_screen_percent_summary"
             android:min="0"
@@ -67,5 +67,16 @@
             aicpextras:unitsRight="@string/unit_percent"
             android:defaultValue="60" />
 
+        <com.aicp.gear.preference.SecureSettingSwitchPreference
+            android:key="edge_gestures_back_show_ui_feedback"
+            android:title="@string/edge_gestures_back_show_ui_feedback_title"
+            android:summary="@string/edge_gestures_back_show_ui_feedback_summary"
+            android:defaultValue="true" />
+
+         <com.aicp.gear.preference.SecureSettingSwitchPreference
+            android:key="edge_gestures_back_use_black_arrow"
+            android:title="@string/edge_gestures_back_use_black_arrow_title"
+            android:summary="@string/edge_gestures_back_use_black_arrow_summary"
+            android:defaultValue="true" />
     </PreferenceCategory>
 </PreferenceScreen>
