--- a/res/values/stats_strings.xml
+++ b/res/values/stats_strings.xml
@@ -20,7 +20,7 @@
 <resources>
 
     <!-- About device screen, list item title. Takes the user to the screen about opting in or out of anonymous statistics. -->
-    <string name="anonymous_statistics_title">AICP Stats</string>
+    <string name="anonymous_statistics_title">AICP Stats (Not Used)</string>
     <string name="anonymous_statistics_summary">Help AICP by opting into anonymous statistics reporting</string>
     <string name="anonymous_statistics_warning_title">About</string>
     <string name="anonymous_statistics_warning">Opting into AICP Stats will allow non-personal data to be submitted to
