--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -22,18 +22,6 @@
     android:title="@string/quick_settings_title">
 
     <com.aicp.gear.preference.SystemSettingSwitchPreference
-        android:key="music_tile_title"
-        android:title="@string/qs_music_tile_track_optional_title"
-        android:summary="@string/qs_music_tile_track_optional_summary"
-        android:defaultValue="false"/>
-
-    <com.aicp.gear.preference.SystemSettingSwitchPreference
-        android:key="qs_quickbar_scroll_enabled"
-        android:title="@string/qqs_scroll_title"
-        android:summary="@string/qqs_scroll_summary"
-        android:defaultValue="false"/>
-
-    <com.aicp.gear.preference.SystemSettingSwitchPreference
         android:key="force_expanded_notifications"
         android:title="@string/force_expanded_notifications_title"
         android:summary="@string/force_expanded_notifications_summary" 
@@ -57,17 +45,20 @@
         android:summary="@string/qs_footer_services_summary"
         android:defaultValue="false" />
 
+  <PreferenceCategory
+        android:title="@string/tiles_cat_title">
+
+   <com.aicp.gear.preference.SystemSettingSwitchPreference
+        android:key="music_tile_title"
+        android:title="@string/qs_music_tile_track_optional_title"
+        android:summary="@string/qs_music_tile_track_optional_summary"
+        android:defaultValue="false"/>
+
     <com.aicp.gear.preference.SystemSettingSwitchPreference
         android:key="qs_tile_title_visibility"
         android:title="@string/qs_tile_title_visibility_title"
         android:summary="@string/qs_tile_title_visibility_summary"
         android:defaultValue="true" />
-
-    <com.aicp.gear.preference.SecureSettingSwitchPreference
-        android:key="quick_settings_vibrate"
-        android:title="@string/quick_settings_vibrate_title"
-        android:summary="@string/quick_settings_vibrate_summary"
-        android:defaultValue="false"/>
 
     <com.aicp.gear.preference.SystemSettingSwitchPreference
         android:key="qs_carrier_text"
@@ -75,18 +66,32 @@
         android:summary="@string/qs_hide_carriertext_summary"
         android:defaultValue="false" />
 
-    <com.aicp.gear.preference.SystemSettingSeekBarPreference
-        android:key="qs_panel_bg_alpha"
-        android:title="@string/qs_panel_alpha_title"
-        android:max="255"
-        android:min="0"
-        aicpextras:unitsLeft=""
-        aicpextras:unitsRight=""
-        android:defaultValue="216" />
+    <com.aicp.gear.preference.SystemSettingSwitchPreference
+        android:key="qs_quickbar_scroll_enabled"
+        android:title="@string/qqs_scroll_title"
+        android:summary="@string/qqs_scroll_summary"
+        android:defaultValue="false"/>
+
+    <com.aicp.gear.preference.SecureSettingSwitchPreference
+        android:key="quick_settings_vibrate"
+        android:title="@string/quick_settings_vibrate_title"
+        android:summary="@string/quick_settings_vibrate_summary"
+        android:defaultValue="false"/>
+
+    </PreferenceCategory>
 
     <PreferenceCategory
         android:key="qs_layout_category"
         android:title="@string/qs_layout_category_title">
+
+        <com.aicp.gear.preference.SystemSettingSeekBarPreference
+            android:key="qs_panel_bg_alpha"
+            android:title="@string/qs_panel_alpha_title"
+            android:max="255"
+            android:min="0"
+            aicpextras:unitsLeft=""
+            aicpextras:unitsRight=""
+            android:defaultValue="216" />
 
         <com.aicp.gear.preference.SystemSettingSwitchPreference
             android:key="qs_show_mini"
