--- a/res/xml/status_bar.xml
+++ b/res/xml/status_bar.xml
@@ -25,6 +25,13 @@
         android:key="statusbar_gestures_category"
         android:title="@string/status_bar_gestures_category_title">
 
+        <!-- Double tap to sleep -->
+        <lineageos.preference.LineageSystemSettingSwitchPreference
+            android:key="double_tap_sleep_gesture"
+            android:title="@string/status_bar_double_tap_to_sleep_title"
+            android:summary="@string/status_bar_double_tap_to_sleep_summary"
+            android:defaultValue="true" />
+
         <!-- Quick pulldown -->
         <lineageos.preference.LineageSystemSettingListPreference
             android:key="qs_quick_pulldown"
@@ -41,18 +48,33 @@
             android:defaultValue="0"
             android:title="@string/smart_pulldown_title" />
 
-        <!-- Double tap to sleep -->
-        <lineageos.preference.LineageSystemSettingSwitchPreference
-            android:key="double_tap_sleep_gesture"
-            android:title="@string/status_bar_double_tap_to_sleep_title"
-            android:summary="@string/status_bar_double_tap_to_sleep_summary"
-            android:defaultValue="true" />
-
     </PreferenceCategory>
 
     <PreferenceCategory
         android:key="statusbar_icons_category"
         android:title="@string/status_bar_icons_category_title">
+
+        <!-- Battery style -->
+        <PreferenceScreen
+            android:key="status_bar_battery"
+            android:title="@string/status_bar_battery_options"
+            android:summary="@string/status_bar_battery_summary"
+            android:fragment="com.aicp.extras.fragments.StatusBarBatterySettings" />
+
+        <!-- Battery bar -->
+        <com.aicp.extras.preference.SystemSettingMasterSwitchPreference
+            android:title="@string/battery_bar_title"
+            android:key="statusbar_battery_bar"
+            android:summary="@string/battery_bar_summary"
+            android:defaultValue="false"
+            android:fragment="com.aicp.extras.fragments.BatteryBar" />
+
+        <!-- Show clock on Statusbar -->
+        <PreferenceScreen
+            android:key="status_bar_clock"
+            android:title="@string/status_bar_clock_title"
+            android:summary="@string/status_bar_clock_summary"
+            android:fragment="com.aicp.extras.fragments.StatusBarClockSettings" />
 
         <!-- System icons -->
         <Preference
@@ -62,25 +84,6 @@
             <intent
                 android:action="com.android.settings.action.STATUS_BAR_TUNER" />
         </Preference>
-
-        <!-- Show clock on Statusbar -->
-        <PreferenceScreen
-            android:key="status_bar_battery"
-            android:title="@string/status_bar_battery_options"
-            android:fragment="com.aicp.extras.fragments.StatusBarBatterySettings" />
-
-        <!-- Show clock on Statusbar -->
-        <PreferenceScreen
-            android:key="status_bar_clock"
-            android:title="@string/status_bar_clock_title"
-            android:fragment="com.aicp.extras.fragments.StatusBarClockSettings" />
-
-        <!-- Show logo on Statusbar -->
-        <com.aicp.extras.preference.SystemSettingMasterSwitchPreference
-            android:key="status_bar_logo"
-            android:title="@string/status_bar_logo_title"
-            android:defaultValue="false"
-            android:fragment="com.aicp.extras.fragments.StatusBarLogo" />
 
         <!-- Data icon - show 4G instead of LTE -->
         <com.aicp.gear.preference.SystemSettingSwitchPreference
@@ -95,22 +98,6 @@
            android:title="@string/volte_icon_title"
            android:summary="@string/volte_icon_summary"
            android:defaultValue="false" />
-
-        <!-- Show Network Traffic State on Statusbar -->
-        <com.aicp.gear.preference.SystemSettingSwitchPreference
-            android:key="network_traffic_state"
-            android:title="@string/network_traffic_state_title"
-            android:defaultValue="false" />
-
-        <com.aicp.gear.preference.SystemSettingSeekBarPreference
-           android:key="network_traffic_autohide_threshold"
-           android:title="@string/network_traffic_autohide_threshold_title"
-           android:max="10"
-           android:min="0"
-           aicpextras:unitsLeft=""
-           aicpextras:unitsRight=""
-           android:defaultValue="1"
-           android:dependency="network_traffic_state" />
 
    </PreferenceCategory>
 
@@ -130,12 +117,35 @@
           android:key="custom_carrier_label"
           android:title="@string/custom_carrier_label_title" />
 
+      <!-- Show logo on Statusbar -->
       <com.aicp.extras.preference.SystemSettingMasterSwitchPreference
-          android:title="@string/battery_bar_title"
-          android:key="statusbar_battery_bar"
+          android:key="status_bar_logo"
+          android:title="@string/status_bar_logo_title"
+          android:summary="@string/status_bar_logo_summary"
           android:defaultValue="false"
-          android:fragment="com.aicp.extras.fragments.BatteryBar" />
+          android:fragment="com.aicp.extras.fragments.StatusBarLogo" />
 
     </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/network_traffic_cat_title">
+
+      <!-- Show Network Traffic State on Statusbar -->
+      <com.aicp.gear.preference.SystemSettingSwitchPreference
+          android:key="network_traffic_state"
+          android:title="@string/network_traffic_state_title"
+          android:defaultValue="false" />
+
+      <com.aicp.gear.preference.SystemSettingSeekBarPreference
+          android:key="network_traffic_autohide_threshold"
+          android:title="@string/network_traffic_autohide_threshold_title"
+          android:max="10"
+          android:min="0"
+          aicpextras:unitsLeft=""
+          aicpextras:unitsRight=""
+          android:defaultValue="1"
+          android:dependency="network_traffic_state" />
+
+     </PreferenceCategory>
 
 </PreferenceScreen>
