--- a/res/xml/system_animations.xml
+++ b/res/xml/system_animations.xml
@@ -21,20 +21,21 @@
     xmlns:aicpextras="http://schemas.android.com/apk/res-auto"
     android:title="@string/system_animations_title">
 
-    <Preference
-        android:key="custom_bootanimation"
-        android:title="@string/custom_bootanimation_title"
-        android:summary="@string/custom_bootanimation_summary" />
-
     <com.aicp.gear.preference.GlobalSettingSwitchPreference
         android:key="system_default_animation"
         android:title="@string/system_default_animation_title"
         android:summary="@string/system_default_animation_summary"
         android:defaultValue="0" />
 
+    <Preference
+        android:key="custom_bootanimation"
+        android:title="@string/custom_bootanimation_title"
+        android:summary="@string/custom_bootanimation_summary" />
+
     <PreferenceScreen
         android:key="aokp_animation"
         android:title="@string/system_animation_title"
+        android:summary="@string/system_animation_aokpsummary"
         android:fragment="com.aicp.extras.fragments.AnimationControls" />
 
     <com.aicp.gear.preference.SystemSettingIntListPreference
